@@ -4,6 +4,7 @@ import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStreamReader;
 import java.net.HttpURLConnection;
+import java.net.URI;
 import java.net.URL;
 import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
@@ -11,36 +12,35 @@ import java.util.HashMap;
 import java.util.Map;
 
 public class TranslatorAPI {
+    private static final String GOOGLE_TRANSLATE_API = "https://script.google.com/macros/s/AKfycbxzCfT78zpe2hPNd75uEzo7Joq2m-ach6UxoEuKpnf0JEgUcBc4C7SKL6QFeZ5ghDJM/exec";
     private final Map<String, String> cache = new HashMap<>();
 
-    public String translateEnToVi(String text) throws IOException {
+    public String translateTo(String text, String from, String to) throws IOException, InterruptedException {
         String translation = cache.get(text);
         if (translation == null) {
-            translation = translate("en", "vi", text);
+            translation = translate(from, to, text);
             cache.put(text, translation);
         }
-
         return translation;
     }
 
-    public String translateViToEn(String text) throws IOException {
-        String translation = cache.get(text);
-        if (translation == null) {
-            translation = translate("vi", "en", text);
-            cache.put(text, translation);
-        }
+    public String translateEnToVi(String text) throws IOException, InterruptedException {
+        return translateTo(text, "en", "vi");
+    }
 
-        return translation;
+    public String translateViToEn(String text) throws IOException, InterruptedException {
+        return translateTo(text, "vi", "en");
     }
 
     private String translate(String langFrom, String langTo, String text) throws IOException {
         double startTime = System.currentTimeMillis();
-        String urlStr = "https://script.google.com/macros/s/AKfycbxzCfT78zpe2hPNd75uEzo7Joq2m-ach6UxoEuKpnf0JEgUcBc4C7SKL6QFeZ5ghDJM/exec"
+        String urlStr = GOOGLE_TRANSLATE_API
                 +
                 "?q=" + URLEncoder.encode(text, StandardCharsets.UTF_8) +
                 "&target=" + langTo +
                 "&source=" + langFrom;
-        URL url = new URL(urlStr);
+        URI uri = URI.create(urlStr);
+        URL url = uri.toURL();
         StringBuilder response = new StringBuilder();
         HttpURLConnection con = (HttpURLConnection) url.openConnection();
         con.setRequestProperty("User-Agent", "Mozilla/5.0");
